Fixed Layout Bugs, Added share button.

--- a/Styles/Main.css
+++ b/Styles/Main.css
@@ -38,7 +38,8 @@ body .demo-blog {
   font-family: 'Roboto', 'Helvetica', sans-serif;
 }
 
-.demo-blog .blog__posts {
+.demo-blog .blog__posts 
+{
   max-width: 900px;
   padding: 0;
   display: -webkit-flex;
@@ -554,4 +555,9 @@ body .demo-blog {
     z-index: 2; 
     background: url(starting-img2.jpg) no-repeat; 
     background-size: contain;
-    }
+}
+
+#ctl00_ContentPlaceHolder1_UpdatePanel1
+{
+    width: 100%;    
+}
